assets/style.css
/* START defaults */

body, html {
    background-color: #cfcfcf;
    height: 100%;
    margin: 2px;
    padding: 2px;
    font-family: monospace;
    scroll-behavior: smooth;
}

div {
    border-radius: 5px;
    background-color: #ffffff;
    margin-top: 10px;
    border-color: #000000;
    border-style: solid;
    border-width: 2px;
    padding: 40px;
}

details {
    transition: 0.2s;
}

code {
    background-color: #0000001F;
    white-space: pre;
}
/* END defaults */

/* START fonts */

.big-font {
    font-size: 500%;
}

.mediumer-font {
    font-size: 250% !important;
}

.normal-font {
    font-size: 200% !important;
}

.medium-font {
    font-size: 150% !important;
}

.small-font {
    font-size: 100% !important;
}

/* END fonts */

/* START items */
.content-block {
    padding-bottom: 0px;
}

.logolist {
    color: #000000;
    text-decoration: none;
    text-align: center;
}

/* END items */

/* START tiles */

.tilegrid {
    align-items: center;
    display: grid;
    grid-template-columns: auto 25% auto 25% auto auto 25% auto 25% auto;
    grid-row: auto;
    background-color: #00000000;
}

.tile {
    margin: auto;
    width: 90%;
    padding-top: 5%;
}

.tileimg:hover {
    width: 100%;
    padding: 0%;
}

.tileimg {
    transition: 0.2s;
    width: 90%;
    padding: 5%;
}

.tiletext {
    text-align: center;
    padding-right: 10%;
    overflow: hidden;
    white-space: nowrap;
}

/* END tiles */

/* START list */

.list {
    align-items: left;
    display: grid;
    grid-template-columns: 100%;
    grid-row: auto;
    background-color: #00000000;
}

.list-item {
    align-items: left;
    display: grid;
    grid-template-columns: auto 20% 5%;
}

.list-item img {
    width: 80%;
    height: 80%
    align: center;
    padding: 10%;
}

/* END list */

/* START span collapse */

.collapse-parent {}

.collapse-child {
    width: 10px;
    transition: 0.2s;
    display: inline-block;
}

.collapse-parent:hover span {
    width: 0px;
    display: inline-block;
}

/* END span collapse */

/* START grid */

.fourgrid {
    display: grid;
    grid-template-columns: auto auto auto auto;
    background-color: #00000000;
    padding: 0px;
}

.maingrid {
    display: grid;
    grid-template-columns: 15% auto;
    background-color: #00000000;
    padding: 0px;
}

/* END grid */

/* START sidebar */

.sidebar {
    border-radius: 5px;
    top: auto;
    left: auto;
    list-style-type: none;
    padding: 0px;
    width: 13%;
    background-color: #fff;
    border-color: #000;
    border-style: solid;
    border-width: 2px;
}

.sidebar-entry {
    font-family: monospace;
    font-size: 150%;
    display: block;
    color: #000;
    padding: 10px 10px;
    text-decoration: none;
}

.sidebar-entry:hover {
    background-color: #cfcfcf;
    color: #000;
}

.footer {
    border-radius: 5px;
    height: auto;
    bottom: 8px;
    left: auto;
    right: auto;
    list-style-type: none;
    padding: 3px;
    width: 12.65%;
    background-color: #ffffff;
    border-color: #000;
    border-style: solid;
    border-width: 2px;
}

/* END sidebar */

/* START sidebar entry expansion */

.sidebarbutton {
    display: block;
}

.sidebarentry {
    height: 0px;
    transition: 0.5s;
}

.sidebarbutton:hover .sidebarentry {
    display: block;
    height: 40px;
}

.sidebarentrytext {
    transition: 0.5s;
    color: #FFFFFF00
}

.sidebarbutton:hover .sidebarentrytext {
    color: #000000FF;
}

/* END sidebar entry expansion */

/* START attributes */
.rotate-90 {
    position: relative;
    transform: rotate(-180deg);
    display: inline-block;
}

.fixed {
    position: fixed;
}

.nodecorate {
    color: #000;
    text-decoration: none;
}

ol li a {
    color: #000;
    text-decoration: none;
}

.underline {
    text-decoration: underline;
}

.nobmargin {
    margin-bottom: 0px;
}

/* END attributes */

/* START mobile "support" */

#desktop {
    display: block;
}

#mobile {
    display: none;
}

@media screen and (max-width: 1000px) {
    /* why must i make this so godawful */
    #desktop {
        display: none;
    }
    #mobile {
        display: block;
    }
    .maingrid {
        grid-template-columns: auto;
    }
    .fourgrid {
        grid-template-columns: auto auto;
    }
    .big-font {
      ''  font-size: 350%;
    }
    .prevgrid {
        grid-template-columns: 50% 50%;
    }
    .tilegrid {
        grid-template-columns: auto 50% auto 50% auto;
        grid-row: auto auto;
    }
    .list-item {
        grid-template-columns: auto 16% 0%;
    }
}

@media screen and (max-width: 1250px) {
    .big-font {
        font-size: 300% !important;
        font-weight: bold;
    }
}

@media screen and (max-width: 700px) {
    .big-font {
        font-size: 250% !important;
    }
}

@media screen and (max-width: 600px) {
    .big-font {
        font-size: 200% !important;
    }
}

.mobilenav {
    text-decoration: none;
    color: #000;
    background-color: #00000000;
    padding: 5px;
}

.mobilenav:hover {
    background-color: #0F0F0F0F;
}

.fob {
    text-align: center;
    position: fixed;
    padding: 10px 5px 10px 5px;
    bottom: 0%;
    right: 5%;
}
/* END mobile "support" */

